--- a/hoverboard/src/elements/footer-block.html
+++ b/hoverboard/src/elements/footer-block.html
@@ -162,7 +162,7 @@
       <div class="footer-content">
         <iron-image
           class="gdg-logo"
-          src="/images/gdg-logo.svg"
+          src="/images/gdgsv-logo.svg"
           sizing="contain"
           alt="[[app.data.organizer.name]]"
         ></iron-image>
