comment out View all Speakers link

--- a/hoverboard/src/elements/featured-people.html
+++ b/hoverboard/src/elements/featured-people.html
@@ -109,11 +109,11 @@
           </a>
         </template>
       </div>
-      <div>
+      <!-- <div>
         <a href="/speakers" class="block-link">
           <paper-button>[[localize('featured-people-view-all')]]</paper-button>
         </a>
-      </div>
+      </div> -->
     </div>
 
   </template>
