remove placeholder speaker, remove link to view all speakers #11 #12

--- a/hoverboard/src/elements/featured-people.html
+++ b/hoverboard/src/elements/featured-people.html
@@ -91,7 +91,8 @@
 
     <div class="container">
       <h4 class="heading">[[localize('featured-people-title')]]</h4>
-      <div class="people-wrapper">
+      <h3 style="text-align:center;">To be Announced</h3>
+      <!-- <div class="people-wrapper">
         <template is="dom-repeat" items="[[featuredPeople]]" as="person">
           <a href$="/speakers/[[person.id]]" class="person">
             <iron-image
@@ -108,7 +109,8 @@
             <span class="company">[[person.country]]</span>
           </a>
         </template>
-      </div>
+      </div> -->
+
       <!-- <div>
         <a href="/speakers" class="block-link">
           <paper-button>[[localize('featured-people-view-all')]]</paper-button>
