add tag for machine-learning

--- a/hoverboard/src/styles/shared-styles.html
+++ b/hoverboard/src/styles/shared-styles.html
@@ -74,6 +74,7 @@
         --docker: #2196f3;
         --chrome-extensions: #ff9800;
         --progressive-web-apps: #00b4aa;
+        --machine-learning: #FFA500;
       }
 
       [layout] {
